force-app/main/default/objects/Referral__c/fields/AdditionalComments__c.field-meta.xml
<CustomField>
    <fullName>AdditionalComments__c</fullName>
    <label>Additional Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>