force-app/main/default/objects/Referral__c/fields/Archetype__c.field-meta.xml
<CustomField>
    <fullName>Archetype__c</fullName>
    <label>Archetype</label>
    <length>255</length>
    <type>Text</type>
</CustomField>