force-app/main/default/objects/Referral__c/fields/CartAction__c.field-meta.xml
<CustomField>
    <fullName>CartAction__c</fullName>
    <label>Cart Action</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Accepted</fullName>
            </value>
            <value>
                <fullName>Declined</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>