force-app/main/default/objects/Referral__c/fields/ClientRating__c.field-meta.xml
<CustomField>
    <fullName>ClientRating__c</fullName>
    <label>Client Rating</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>