force-app/main/default/objects/Referral__c/fields/Contacts__c.field-meta.xml
<CustomField>
    <fullName>Contacts__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Contacts associated with the referral</description>
    <label>Contacts</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Referrals</relationshipLabel>
    <relationshipName>Referrals</relationshipName>
    <type>Lookup</type>
</CustomField>