force-app/main/default/objects/Referral__c/fields/CreatedByName__c.field-meta.xml
<CustomField>
    <fullName>CreatedByName__c</fullName>
    <description>Name of the user creating the referral</description>
    <formula>CreatedBy.Contact.FirstName+&apos; &apos;+CreatedBy.Contact.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CreatedBy Name</label>
    <type>Text</type>
</CustomField>