force-app/main/default/objects/Referral__c/fields/DateClosed__c.field-meta.xml
<CustomField>
    <fullName>DateClosed__c</fullName>
    <description>Date that the referral is completed and marked as closed</description>
    <label>Date Closed</label>
    <type>Date</type>
</CustomField>