force-app/main/default/objects/Referral__c/fields/DateOfReferral__c.field-meta.xml
<CustomField>
    <fullName>DateOfReferral__c</fullName>
    <description>Date the referral is made</description>
    <label>Date Of Referral</label>
    <type>Date</type>
</CustomField>