force-app/main/default/objects/Referral__c/fields/IsAccountName__c.field-meta.xml
<CustomField>
    <fullName>IsAccountName__c</fullName>
    <formula>IF(   ReferredByAccountID__c &lt;&gt;  $User.AccountId__c ,  FALSE , TRUE)</formula>
    <label>IsAccountName</label>
    <type>Checkbox</type>
</CustomField>