force-app/main/default/objects/Referral__c/fields/IsAccountNameClosed__c.field-meta.xml
<CustomField>
    <fullName>IsAccountNameClosed__c</fullName>
    <formula>IF(  ReferredAccountID__c &lt;&gt; $User.AccountId__c , FALSE , TRUE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>IsAccountNameClosed</label>
    <type>Checkbox</type>
</CustomField>