force-app/main/default/objects/Referral__c/fields/Outcome__c.field-meta.xml
<CustomField>
    <fullName>Outcome__c</fullName>
    <description>Outcome for the referral recorded when closing the referral</description>
    <label>Outcome</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Resource Provided</fullName>
            </value>
            <value>
                <fullName>Resource Not Provided</fullName>
            </value>
            <value>
                <fullName>Resource Cancelled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>