force-app/main/default/objects/Referral__c/fields/OutcomeReason__c.field-meta.xml
<CustomField>
    <fullName>OutcomeReason__c</fullName>
    <description>Outcome reason recorded when closing the referral</description>
    <label>Outcome Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cancelled by Client</fullName>
            </value>
            <value>
                <fullName>Didn&apos;t meet eligibility criteria</fullName>
            </value>
            <value>
                <fullName>Client didn&apos;t come to appointment</fullName>
            </value>
            <value>
                <fullName>Client refused plan</fullName>
            </value>
            <value>
                <fullName>Funding not available</fullName>
            </value>
            <value>
                <fullName>Unable to reach client</fullName>
            </value>
            <value>
                <fullName>Services available didn&apos;t fit the client&apos;s need</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>