force-app/main/default/objects/Referral__c/fields/Referral_Count__c.field-meta.xml
<CustomField>
    <fullName>Referral_Count__c</fullName>
    <description>Rating for the resource provided while closing the referral</description>
    <formula>IF(Resource__r.Rating_Sum__c  &lt;&gt; 0, TEXT(ROUND(((Resource__r.Rating_Sum__c/Resource__r.Rating_Count__c)*100),0)) + &quot;%&quot;, &quot;0&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Resource Rating</label>
    <type>Text</type>
</CustomField>