force-app/main/default/objects/Referral__c/fields/ReferredAccountID__c.field-meta.xml
<CustomField>
    <fullName>ReferredAccountID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Organization who receives the referral (to whom the referral is made)</description>
    <label>Organization Referred To</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Referrals</relationshipLabel>
    <relationshipName>Referrals</relationshipName>
    <type>Lookup</type>
</CustomField>