force-app/main/default/objects/Referral__c/fields/ReferredByAccountID__c.field-meta.xml
<CustomField>
    <fullName>ReferredByAccountID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Name of the organization to which the user is assocaited with who is making the referral</description>
    <label>Organization Referred By</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Referrals (Organization Referred By)</relationshipLabel>
    <relationshipName>ReferredByAccountID</relationshipName>
    <type>Lookup</type>
</CustomField>