force-app/main/default/objects/Referral__c/fields/ReferringUserEmail__c.field-meta.xml
<CustomField>
    <fullName>ReferringUserEmail__c</fullName>
    <description>Email of the user who is making the referral</description>
    <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
    <label>Referring User Email</label>
    <type>Email</type>
</CustomField>