force-app/main/default/objects/Referral__c/fields/ReferringUserPhone__c.field-meta.xml
<CustomField>
    <fullName>ReferringUserPhone__c</fullName>
    <description>Phone number of the user making the referral</description>
    <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
    <label>Referring User Phone</label>
    <type>Phone</type>
</CustomField>