force-app/main/default/objects/Referral__c/fields/Source__c.field-meta.xml
<CustomField>
    <fullName>Source__c</fullName>
    <description>Indicates whether the source of referral is Added by Resident, Suggested by Partner or Suggested by System</description>
    <label>Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Added by Resident</fullName>
            </value>
            <value>
                <fullName>Suggested by Partner</fullName>
            </value>
            <value>
                <fullName>Suggested by System</fullName>
            </value>
            <value>
                <fullName>Frequently Paired Together</fullName>
            </value>
            <value>
                <fullName>Related Services</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>