force-app/main/default/objects/Referral__c/fields/SourceSystem__c.field-meta.xml
<CustomField>
    <fullName>SourceSystem__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>SourceSystem</label>
    <length>255</length>
    <type>Text</type>
</CustomField>