force-app/main/default/objects/Referral__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>Indicates whether the status of the referral is New, In Progress-Org in System, In Progress-Org not in system, Closed or Draft</description>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>In Progress - Org in System</fullName>
                <label>In Progress</label>
            </value>
            <value>
                <fullName>In Progress - Org Not in System</fullName>
                <label>Org Not in System</label>
            </value>
            <value>
                <fullName>Closed</fullName>
            </value>
            <value>
                <fullName>Draft</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>