force-app/main/default/objects/Referral__c/fields/UserComplete__c.field-meta.xml
<CustomField>
    <fullName>UserComplete__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Marks whether a referral is complete from the client perspective</description>
    <label>Marked Complete by User</label>
    <type>Checkbox</type>
</CustomField>