force-app/main/default/objects/Referral__c/recordTypes/ReferralRecord.recordType-meta.xml
<RecordType>
    <fullName>ReferralRecord</fullName>
    <active>true</active>
    <description>Referral Record Type</description>
    <label>Referral Record</label>
</RecordType>