force-app/main/default/objects/Referral__c/listViews/ClaimSiteQueue_Referral.listView-meta.xml
<ListView>
    <fullName>ClaimSiteQueue_Referral</fullName>
    <filterScope>Queue</filterScope>
    <label>State User Queue</label>
    <queue>ClaimSiteQueue</queue>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>