force-app/main/default/objects/Referral__c/listViews/Unassigned_Referral.listView-meta.xml
<ListView>
    <fullName>Unassigned_Referral</fullName>
    <filterScope>Queue</filterScope>
    <label>Unassigned</label>
    <queue>Unassigned</queue>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>